sys_config/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Aug 24 21:14:39 2014
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
#for nat function
-A POSTROUTING -o eno1 -j MASQUERADE
#-A PREROUTING -i enp3s0u2u4u4u1 -d 140.115.51.188 -p tcp --dport 80 -j DNAT --to-destination 192.168.128.241:80
#port trasnlation
#for windows rdp(remote desktop protocol)
#-A PREROUTING -i enp3s0u2u4u4u1 -d 140.115.51.188 -p tcp --dport 10007 -j DNAT --to-destination 192.168.74.10:3389
#-A PREROUTING -i ens224 -d 140.127.196.77 -p tcp --dport 10007 -j DNAT --to-destination 192.168.128.41:3389
#for ssh
#-A PREROUTING -i ens224 -d 140.127.196.77 -p tcp --dport 27722 -j DNAT --to-destination 192.168.128.241:22
#-A PREROUTING -i ens224 -d 140.127.196.77 -p tcp --dport 27723 -j DNAT --to-destination 192.168.128.242:22

COMMIT
# Completed on Sun Aug 24 21:14:39 2014
# Generated by iptables-save v1.4.21 on Sun Aug 24 21:14:39 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 50090:50100 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
#-A INPUT -p tcp --dport 20 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
#filter foward chain
-A FORWARD -i eno1 -o enp3s0u2u4u4u1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0u2u4u4u1 -o eno1 -j ACCEPT
#allow port traslation pass thorugh
#-A FORWARD -i enp3s0u2u4u4u1 -o eno1 -d 192.168.74.10 -p tcp --dport 3389 -m state --state NEW -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sun Aug 24 21:14:39 2014
